[package]
name = "starbox"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["clipboard-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
trans = { path = "./trans" }
ssh2 = "0.9"
chrono = "0.4"
clap = { version = "4.2.1", features = ["derive"] }


[features]
custom-protocol = ["tauri/custom-protocol"]
