[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11"
tonic = "0.9"
prost-types = "0.11"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.11", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.2.1", features = ["derive"] }
url = "2.3.1"
jsonto = "0.1"
thiserror = "1.0"

domain = { path = "../domain" }
common = { path = "../common" }
model = { path = "../model" }
