[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
tonic = "0.8"
prost-types = "0.11"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.11", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }

domain = { path = "../../domain" }
common = { path = "../../common" }
model = { path = "../../model" }
tracing = "0.1"
tracing-subscriber = "0.3"