[package]
name = "public"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
tonic = "0.8"
prost-types = "0.11"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.11", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.2.1", features = ["derive"] }
url = "2.3.1"

domain = { path = "../../domain" }
common = { path = "../../common" }
model = { path = "../../model" }
